src/force-app/main/default/objects/Case_Jira_AppFire_Setting__mdt/Case_Jira_AppFire_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Used for Custom Settings that affect APEX for the MCG Case Escalation work that uses the AppFire Jira Integration. Case 00391891 TCE 3/11/2025</description>
    <label>Case Jira AppFire Setting</label>
    <pluralLabel>Case Jira AppFire Settings</pluralLabel>
</CustomObject>