src/force-app/main/default/objects/Case_Jira_AppFire_Setting__mdt/fields/Issue_ID__c.field-meta.xml
<CustomField>
    <fullName>Issue_ID__c</fullName>
    <description>Issue ID is the Issue Type. MCG has 20 or 30 when this was built.</description>
    <inlineHelpText>The Issue Id comes from the connected Jira Environment. The Jira Admin will give you this. This setting should be confirmed and updated when using in Sandbox. This setting is confgiured for Production after a Sandbox Refresh.</inlineHelpText>
    <label>Issue ID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>