src/force-app/main/default/objects/Case_Jira_AppFire_Setting__mdt/fields/JCFS_API_Apex_Enabled__c.field-meta.xml
<CustomField>
    <fullName>JCFS_API_Apex_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls if the JCFS API is called via Apex. Created 3/21/2025 TCE</description>
    <inlineHelpText>Check this to use the JCFS.API Apex Triggers. If disabled, all of the Apex Code is skipped, simimar to if there were not config settings. If you are having trouble with API or Apex related to this is broken, try to disable this setting.</inlineHelpText>
    <label>JCFS API Apex Enabled</label>
    <type>Checkbox</type>
</CustomField>