src/force-app/main/default/objects/Case_Jira_AppFire_Setting__mdt/fields/JCFS_API_Use_Advanced_API__c.field-meta.xml
<CustomField>
    <fullName>JCFS_API_Use_Advanced_API__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This setting is used by Apex to determine if we send a case list the JCFS API (recommended). Created 03/22/2025 TCE</description>
    <inlineHelpText>Check this to use the Advanced API. This is the default setting. The Basic API does not send a case list to the JCFS.API tooling. If you are having trouble with API calls, try to disable this setting.</inlineHelpText>
    <label>JCFS API Use Advanced API</label>
    <type>Checkbox</type>
</CustomField>