src/force-app/main/default/objects/Case_Jira_AppFire_Setting__mdt/fields/Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_ID__c</fullName>
    <description>Used for Custom Settings that affect APEX for the MCG Case Escalation work that uses the AppFire Jira Integration. Case 00391891 TCE 3/11/2025</description>
    <inlineHelpText>The Project Id comes from the connected Jira Environment. The Jira Admin will give you this. This setting should be confirmed and updated when using in Sandbox. This setting is confgiured for Production after a Sandbox Refresh.</inlineHelpText>
    <label>Project ID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>